examples/test/testpolicy12755.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12755
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key31: value6
      key18: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value40
          key2: value25
          key33: value42
      podSelector:
        matchLabels:
          key12: value13
